// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CheckboxesWidget inline 1`] = `
<DocumentFragment>
  <div
    aria-describedby="_id__error _id__description _id__help"
    aria-label="Some simple label"
    class="react-aria-CheckboxGroup"
    data-orientation="horizontal"
    data-rac=""
    id="react-aria-:r5:"
    role="group"
  >
    <div
      class="react-aria-CheckboxGroup-items"
    >
      <label
        class="react-aria-Checkbox"
        data-disabled="true"
        data-rac=""
        data-react-aria-pressable="true"
        data-required="true"
      >
        <span
          style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
        >
          <input
            data-react-aria-pressable="true"
            disabled=""
            id="_id-0"
            name="_id"
            required=""
            type="checkbox"
          />
        </span>
        <div
          class="react-aria-Checkbox-indicator"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 18 18"
          >
            <polyline
              points="2 9 7 14 16 4"
            />
          </svg>
        </div>
        A
      </label>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CheckboxesWidget simple 1`] = `
<DocumentFragment>
  <div
    aria-describedby="_id__error _id__description _id__help"
    aria-label="Some simple label"
    class="react-aria-CheckboxGroup"
    data-orientation="vertical"
    data-rac=""
    id="react-aria-:r0:"
    role="group"
  >
    <div
      class="react-aria-CheckboxGroup-items"
    >
      <label
        class="react-aria-Checkbox"
        data-disabled="true"
        data-rac=""
        data-react-aria-pressable="true"
        data-required="true"
      >
        <span
          style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
        >
          <input
            data-react-aria-pressable="true"
            disabled=""
            id="_id-0"
            name="_id"
            required=""
            type="checkbox"
          />
        </span>
        <div
          class="react-aria-Checkbox-indicator"
        >
          <svg
            aria-hidden="true"
            viewBox="0 0 18 18"
          >
            <polyline
              points="2 9 7 14 16 4"
            />
          </svg>
        </div>
        A
      </label>
    </div>
  </div>
</DocumentFragment>
`;
